# spin-crud-mysql

./: Cargo.toml  README.md  spin.toml
src/: config.rs  demo.rs  lib.rs  models.rs  utils.rs
